Fixed spacing on Markets page
The spacing between boxes at the middle screen size wasn’t working. Now
it is. Boom!

--- a/source/stylesheets/_partials/_style.scss
+++ b/source/stylesheets/_partials/_style.scss
@@ -4,9 +4,15 @@
 	padding-top: 3em;
 }
 
-.spacing, .last{
+.second {
+	padding-top: 3em;
+}
+
+.third{
+	padding-top: 3em;
 	padding-bottom: 3em;
 }
+
 
 .border{
 	border: solid $brown 2px;
